Fix text alignment in plain chip list

--- a/src/nationalarchives/utilities/typography/_index.scss
+++ b/src/nationalarchives/utilities/typography/_index.scss
@@ -117,6 +117,8 @@ small {
 %chip-plain {
   padding: 0;
 
+  text-align: left;
+
   background-color: transparent;
 
   border: none;
